--- a/index.qmd
+++ b/index.qmd
@@ -678,7 +678,7 @@ Export merged final data set into `data/outputs` folder.
 If the Shiny application fails to load below, please click [here](http://lysbeth.shinyapps.io/nomilo_fishpond_biogeochemical_changes_over_time).
 :::
 
-<iframe src="http://lysbeth.shinyapps.io/nomilo_fishpond_biogeochemical_changes_over_time" width="100%" height="900" frameborder="1"></iframe>
+<iframe src="https://lysbeth.shinyapps.io/nomilo_fishpond_biogeochemical_changes_over_time" width="100%" height="900" frameborder="1"></iframe>
 
 ```{r}
 #| eval: false
